--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
     <fa-icon [icon]="icons.faShareAlt" size="2x"></fa-icon>
   </button>
 
-  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="showSearch(true)" ngbTooltip="Search"
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2 btn-search" (click)="showSearch(true)" ngbTooltip="Search"
     [disabled]="!selectedFile" [class.text-light]="selectedFile">
     <fa-icon [icon]="icons.faSearch" size="2x"></fa-icon>
   </button>
@@ -19,7 +19,7 @@
     [disabled]="!selectedFile" [class.text-light]="selectedFile">
     <fa-icon [icon]="icons.faPlusSquare" size="2x"></fa-icon>
   </button>
-  <button class="btn btn-sm btn-outline-secondary border-0 mb-2" (click)="collapseAll()" ngbTooltip="Collapse all"
+  <button class="btn btn-sm btn-outline-secondary border-0 mb-2 btn-collapse" (click)="collapseAll()" ngbTooltip="Collapse all"
     [disabled]="!selectedFile" [class.text-light]="selectedFile">
     <fa-icon [icon]="icons.faMinusSquare" size="2x"></fa-icon>
   </button>
